--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  socket_io_client: ^3.0.0
+  socket_io_client: ^3.0.2
+  rxdart: ^0.28.0
 
 dev_dependencies:
   flutter_test:
